# hpicview

./: .gitignore  .gitmodules  CMakeLists.txt  GUIFrame.cpp  GUIFrame.h  Makefile  README.md  TODO.md  WxWizFrame.fbp  directory_iteration.cpp  hpicview.cbp  hpicview.desktop  hpicview.rc  hpicviewApp.cpp  hpicviewApp.h  hpicviewMain.cpp  hpicviewMain.h  jpegtran.cpp  jpegtran.h  rotate.cpp  zoom.cpp
resources/: arrow_left.svg.png.h  arrow_right.svg.png.h  fit.svg.png.h  folder_open.svg.png.h  icon.svg.png.h  icon.svg.xpm  question.svg.png.h  redo.svg.png.h  search_minus.svg.png.h  search_plus.svg.png.h  undo.svg.png.h
src/: GUIFrame.cpp  GUIFrame.h  about.cpp  clipboard.cpp  directory_iteration.cpp  droptarget.hpp  extensions.cpp  extensions.hpp  file_handling.cpp  hpicview.rc  hpicviewApp.cpp  hpicviewApp.hpp  hpicviewMain.cpp  hpicviewMain.hpp  jpegtran.cpp  jpegtran.hpp  rotate.cpp  sstatbmp.cpp  sstatbmp.h  zoom.cpp
submodules/: libjpeg-reset-orientation-tag.patch
